# Kursovik_OOP_Ovsianik

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: interaction_with_API.py  interaction_with_files.py  utils.py  vacancy.py
tests/: conftest.py  test_interaction_with_API.py  test_interaction_with_files.py  test_utils.py  test_vacancy.py
